--- a/index.css
+++ b/index.css
@@ -3,12 +3,14 @@ html {
 }
 
 body {
-    background: #f7f7f7;
+    background: #2e4e77;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    font-size: 25px;
+    color: white;
 }
 
 .form,
@@ -18,4 +20,24 @@ body {
 
 .showing {
     display: block;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+
+.bgImage {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    animation: fadeIn .5s linear;
 }
